--- a/projects/truenas-ui/src/lib/ix-button/ix-button.component.html
+++ b/projects/truenas-ui/src/lib/ix-button/ix-button.component.html
@@ -3,6 +3,7 @@
   (click)="onClick.emit($event)"
   [ngClass]="classes"
   [ngStyle]="{ 'background-color': backgroundColor }"
+  [disabled]="disabled"
 >
   {{ label }}
 </button>
