--- a/projects/truenas-ui/src/lib/ix-file-picker/ix-file-picker.component.html
+++ b/projects/truenas-ui/src/lib/ix-file-picker/ix-file-picker.component.html
@@ -41,6 +41,8 @@
       (submitFolderName)="onSubmitFolderName($event.name, $event.tempId)"
       (cancelFolderCreation)="onCancelFolderCreation($event)"
       (clearSelection)="onClearSelection()"
+      (submit)="onSubmit()"
+      (cancel)="onCancel()"
       (close)="close()">
     </ix-file-picker-popup>
   </ng-template>
