--- a/projects/truenas-ui/src/lib/ix-button/ix-button.component.scss
+++ b/projects/truenas-ui/src/lib/ix-button/ix-button.component.scss
@@ -11,6 +11,12 @@
   font-weight: 500;
   line-height: 1;
   font-family: 'IBM Plex Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
 }
 .button-primary {
   background-color: var(--primary);
