--- a/projects/truenas-ui/src/lib/ix-file-picker/ix-file-picker-popup.component.html
+++ b/projects/truenas-ui/src/lib/ix-file-picker/ix-file-picker-popup.component.html
@@ -1,41 +1,42 @@
 <!-- Header with breadcrumb navigation -->
 <div class="ix-file-picker-header">
   <nav class="ix-file-picker-breadcrumb" aria-label="File path">
-    <button 
-      *ngFor="let segment of pathSegments(); let last = last"
+    <button
+      *ngFor="let segment of currentPath() | ixTruncatePath; let last = last"
       class="breadcrumb-segment"
       [class.current]="last"
+      [class.parent-nav]="segment.name === '..'"
       [disabled]="last"
       (click)="navigateToPath(segment.path)">
       {{ segment.name }}
     </button>
   </nav>
-  
+
   <div class="ix-file-picker-actions">
-    <ix-button 
-      *ngIf="allowCreate" 
+    <ix-button
+      *ngIf="allowCreate()"
       variant="outline"
+      label="New Folder"
+      [disabled]="isCreateDisabled()"
       (onClick)="onCreateFolder()">
-      <ix-icon name="folder-plus" library="mdi"></ix-icon>
-      New Folder
     </ix-button>
   </div>
 </div>
 
 <!-- Loading indicator -->
-<div *ngIf="loading" class="ix-file-picker-loading">
+<div *ngIf="loading()" class="ix-file-picker-loading">
   <ix-icon name="loading" library="mdi"></ix-icon>
   <span>Loading...</span>
 </div>
 
 <!-- File table -->
-<div class="ix-file-picker-content" *ngIf="!loading">
-  <ix-table 
+<div class="ix-file-picker-content" *ngIf="!loading()">
+  <ix-table
     [dataSource]="filteredFileItems()"
-    [displayedColumns]="multiSelect ? displayedColumns : displayedColumns.slice(1)">
-    
+    [displayedColumns]="multiSelect() ? displayedColumns : displayedColumns.slice(1)">
+
     <!-- Selection column -->
-    <ng-container ixColumnDef="select" *ngIf="multiSelect">
+    <ng-container ixColumnDef="select" *ngIf="multiSelect()">
       <ng-template ixHeaderCellDef>
         <!-- Select all checkbox -->
       </ng-template>
@@ -53,36 +54,78 @@
     <ng-container ixColumnDef="name">
       <ng-template ixHeaderCellDef>Name</ng-template>
       <ng-template ixCellDef let-item>
-        <div class="file-name-cell"
-             [class.selected]="isSelected(item)"
+
+        <!-- NORMAL MODE: Display name -->
+        <div *ngIf="!item.isCreating"
+             class="file-name-cell"
              [class.disabled]="!!item.disabled"
              [class.zfs-object]="isZfsObject(item)"
              (click)="onItemClick(item)"
              (dblclick)="onItemDoubleClick(item)">
-          <ix-icon 
+          <ix-icon
             [name]="getItemIcon(item)"
             [library]="getItemIconLibrary(item)"
             [class]="'file-icon-' + item.type"
             class="file-icon">
           </ix-icon>
           <span class="file-name">{{ item.name }}</span>
-          
+
           <!-- ZFS badge -->
-          <span 
-            *ngIf="isZfsObject(item)" 
+          <span
+            *ngIf="isZfsObject(item)"
             class="zfs-badge"
             [class]="'zfs-badge-' + item.type">
             {{ getZfsBadge(item) }}
           </span>
-          
+
           <!-- Permission indicator -->
-          <ix-icon 
+          <ix-icon
             *ngIf="item.permissions === 'none'"
             name="lock"
             library="mdi"
             class="permission-icon">
           </ix-icon>
         </div>
+
+        <!-- EDIT MODE: Inline name input with error display -->
+        <div *ngIf="item.isCreating" class="file-name-cell-wrapper">
+          <div class="file-name-cell editing" [class.has-error]="!!item.creationError">
+            <ix-icon
+              name="folder"
+              library="mdi"
+              class="file-icon file-icon-folder">
+            </ix-icon>
+            <input
+              #folderNameInput
+              type="text"
+              role="textbox"
+              aria-label="Folder name"
+              class="folder-name-input"
+              [class.error]="!!item.creationError"
+              [value]="item.name"
+              [disabled]="creationLoading()"
+              (keydown)="onFolderNameKeyDown($event, item)"
+              (blur)="onFolderNameInputBlur($event, item)"
+              [attr.data-autofocus]="true"
+              spellcheck="false"
+              autocomplete="off">
+
+            <!-- Loading indicator during submission -->
+            <ix-icon
+              *ngIf="creationLoading()"
+              name="loading"
+              library="mdi"
+              class="creation-loading-icon">
+            </ix-icon>
+          </div>
+
+          <!-- Inline error message -->
+          <div *ngIf="item.creationError" class="folder-creation-error">
+            <ix-icon name="alert-circle" library="mdi" class="error-icon"></ix-icon>
+            <span class="error-text">{{ item.creationError }}</span>
+          </div>
+        </div>
+
       </ng-template>
     </ng-container>
 
@@ -113,17 +156,19 @@
   </div>
 </div>
 
-<!-- Footer for multi-select -->
-<div *ngIf="multiSelect && selectedItems.length > 0" class="ix-file-picker-footer">
-  <span class="selection-count">
-    {{ selectedItems.length }} item{{ selectedItems.length !== 1 ? 's' : '' }} selected
+<!-- Footer -->
+<div class="ix-file-picker-footer" *ngIf="!loading()">
+  <span class="selection-count" *ngIf="selectedItems().length > 0">
+    {{ selectedItems().length }} item{{ selectedItems().length !== 1 ? 's' : '' }} selected
+  </span>
+  <span class="selection-count" *ngIf="selectedItems().length === 0">
+    No items selected
   </span>
   <div class="footer-actions">
-    <ix-button variant="outline" (onClick)="selectedItems = []">
-      Clear Selection
-    </ix-button>
-    <ix-button (onClick)="close.emit()">
-      Done
+    <ix-button
+      label="Select"
+      [disabled]="selectedItems().length === 0"
+      (onClick)="onSubmit()">
     </ix-button>
   </div>
 </div>
