--- a/projects/truenas-ui/src/lib/ix-menu/ix-menu.component.html
+++ b/projects/truenas-ui/src/lib/ix-menu/ix-menu.component.html
@@ -1,23 +1,7 @@
-<div class="ix-menu-container" [class.ix-menu-container--context]="contextMenu" (contextmenu)="onContextMenu($event)">
-  <button
-    *ngIf="!contextMenu"
-    [cdkMenuTriggerFor]="menu"
-    [disabled]="disabled"
-    class="ix-menu-trigger"
-    [class.disabled]="disabled"
-    [cdkMenuPosition]="getMenuPosition()"
-    (cdkMenuOpened)="onMenuOpen()"
-    (cdkMenuClosed)="onMenuClose()"
-    type="button"
-  >
-    {{ triggerText }}
-    <span class="ix-menu-arrow" [class.ix-menu-arrow--up]="position === 'above'">▼</span>
-  </button>
-
-  <!-- Context menu content slot -->
-  <div *ngIf="contextMenu" class="ix-menu-context-content">
-    <ng-content></ng-content>
-  </div>
+<!-- Context menu content slot -->
+<div *ngIf="contextMenu" class="ix-menu-context-content" (contextmenu)="onContextMenu($event)">
+  <ng-content></ng-content>
+</div>
 
   <!-- Context menu template for overlay -->
   <ng-template #contextMenuTemplate>
@@ -39,7 +23,7 @@
             (click)="onMenuItemClick(item)"
             type="button"
           >
-            <span *ngIf="item.icon" class="ix-menu-item-icon">{{ item.icon }}</span>
+            <ix-icon *ngIf="item.icon" [name]="item.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
             <span class="ix-menu-item-label">{{ item.label }}</span>
             <span *ngIf="item.shortcut" class="ix-menu-item-shortcut">{{ item.shortcut }}</span>
           </button>
@@ -53,7 +37,7 @@
               class="ix-menu-item ix-menu-item--nested"
               type="button"
             >
-              <span *ngIf="item.icon" class="ix-menu-item-icon">{{ item.icon }}</span>
+              <ix-icon *ngIf="item.icon" [name]="item.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
               <span class="ix-menu-item-label">{{ item.label }}</span>
               <span *ngIf="item.shortcut" class="ix-menu-item-shortcut">{{ item.shortcut }}</span>
               <span class="ix-menu-item-arrow">▶</span>
@@ -78,7 +62,7 @@
                       (click)="onMenuItemClick(nestedItem)"
                       type="button"
                     >
-                      <span *ngIf="nestedItem.icon" class="ix-menu-item-icon">{{ nestedItem.icon }}</span>
+                      <ix-icon *ngIf="nestedItem.icon" [name]="nestedItem.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
                       <span class="ix-menu-item-label">{{ nestedItem.label }}</span>
                       <span *ngIf="nestedItem.shortcut" class="ix-menu-item-shortcut">{{ nestedItem.shortcut }}</span>
                     </button>
@@ -92,7 +76,7 @@
                         class="ix-menu-item ix-menu-item--nested"
                         type="button"
                       >
-                        <span *ngIf="nestedItem.icon" class="ix-menu-item-icon">{{ nestedItem.icon }}</span>
+                        <ix-icon *ngIf="nestedItem.icon" [name]="nestedItem.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
                         <span class="ix-menu-item-label">{{ nestedItem.label }}</span>
                         <span *ngIf="nestedItem.shortcut" class="ix-menu-item-shortcut">{{ nestedItem.shortcut }}</span>
                         <span class="ix-menu-item-arrow">▶</span>
@@ -116,7 +100,7 @@
                                 (click)="onMenuItemClick(deepNestedItem)"
                                 type="button"
                               >
-                                <span *ngIf="deepNestedItem.icon" class="ix-menu-item-icon">{{ deepNestedItem.icon }}</span>
+                                <ix-icon *ngIf="deepNestedItem.icon" [name]="deepNestedItem.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
                                 <span class="ix-menu-item-label">{{ deepNestedItem.label }}</span>
                                 <span *ngIf="deepNestedItem.shortcut" class="ix-menu-item-shortcut">{{ deepNestedItem.shortcut }}</span>
                               </button>
@@ -136,7 +120,7 @@
   </ng-template>
 
   <!-- Regular menu template -->
-  <ng-template #menu>
+  <ng-template #menuTemplate>
     <div class="ix-menu" cdkMenu>
       <ng-container *ngFor="let item of items; trackBy: trackByItemId">
         <div
@@ -155,7 +139,7 @@
             (click)="onMenuItemClick(item)"
             type="button"
           >
-            <span *ngIf="item.icon" class="ix-menu-item-icon">{{ item.icon }}</span>
+            <ix-icon *ngIf="item.icon" [name]="item.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
             <span class="ix-menu-item-label">{{ item.label }}</span>
             <span *ngIf="item.shortcut" class="ix-menu-item-shortcut">{{ item.shortcut }}</span>
           </button>
@@ -169,7 +153,7 @@
               class="ix-menu-item ix-menu-item--nested"
               type="button"
             >
-              <span *ngIf="item.icon" class="ix-menu-item-icon">{{ item.icon }}</span>
+              <ix-icon *ngIf="item.icon" [name]="item.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
               <span class="ix-menu-item-label">{{ item.label }}</span>
               <span *ngIf="item.shortcut" class="ix-menu-item-shortcut">{{ item.shortcut }}</span>
               <span class="ix-menu-item-arrow">▶</span>
@@ -194,7 +178,7 @@
                       (click)="onMenuItemClick(nestedItem)"
                       type="button"
                     >
-                      <span *ngIf="nestedItem.icon" class="ix-menu-item-icon">{{ nestedItem.icon }}</span>
+                      <ix-icon *ngIf="nestedItem.icon" [name]="nestedItem.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
                       <span class="ix-menu-item-label">{{ nestedItem.label }}</span>
                       <span *ngIf="nestedItem.shortcut" class="ix-menu-item-shortcut">{{ nestedItem.shortcut }}</span>
                     </button>
@@ -208,7 +192,7 @@
                         class="ix-menu-item ix-menu-item--nested"
                         type="button"
                       >
-                        <span *ngIf="nestedItem.icon" class="ix-menu-item-icon">{{ nestedItem.icon }}</span>
+                        <ix-icon *ngIf="nestedItem.icon" [name]="nestedItem.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
                         <span class="ix-menu-item-label">{{ nestedItem.label }}</span>
                         <span *ngIf="nestedItem.shortcut" class="ix-menu-item-shortcut">{{ nestedItem.shortcut }}</span>
                         <span class="ix-menu-item-arrow">▶</span>
@@ -232,7 +216,7 @@
                                 (click)="onMenuItemClick(deepNestedItem)"
                                 type="button"
                               >
-                                <span *ngIf="deepNestedItem.icon" class="ix-menu-item-icon">{{ deepNestedItem.icon }}</span>
+                                <ix-icon *ngIf="deepNestedItem.icon" [name]="deepNestedItem.icon" library="mdi" size="sm" class="ix-menu-item-icon"></ix-icon>
                                 <span class="ix-menu-item-label">{{ deepNestedItem.label }}</span>
                                 <span *ngIf="deepNestedItem.shortcut" class="ix-menu-item-shortcut">{{ deepNestedItem.shortcut }}</span>
                               </button>
@@ -250,4 +234,3 @@
       </ng-container>
     </div>
   </ng-template>
-</div>
