--- a/projects/truenas-ui/src/lib/ix-card/ix-card.component.html
+++ b/projects/truenas-ui/src/lib/ix-card/ix-card.component.html
@@ -1,8 +1,88 @@
 <div [ngClass]="classes">
-  <div class="ix-card__header" *ngIf="title">
-    <h3 class="ix-card__title">{{ title }}</h3>
+  <!-- Header section -->
+  <div class="ix-card__header" *ngIf="hasHeader">
+    <div class="ix-card__header-left">
+      <h3
+        class="ix-card__title"
+        [class.ix-card__title--link]="titleLink"
+        (click)="onTitleClick()"
+        *ngIf="title">
+        {{ title }}
+      </h3>
+    </div>
+
+    <div class="ix-card__header-right">
+      <!-- Header Status -->
+      <div
+        class="ix-card__status"
+        [ngClass]="getStatusClass(headerStatus?.type)"
+        *ngIf="headerStatus">
+        {{ headerStatus.label }}
+      </div>
+
+      <!-- Header Control (Slide Toggle) -->
+      <div class="ix-card__control" *ngIf="headerControl">
+        <ix-slide-toggle
+          [label]="headerControl.label"
+          [checked]="headerControl.checked"
+          [disabled]="headerControl.disabled || false"
+          (change)="onControlChange($event)">
+        </ix-slide-toggle>
+      </div>
+
+      <!-- Header Menu -->
+      <div class="ix-card__menu" *ngIf="headerMenu && headerMenu.length">
+        <ix-icon-button
+          name="dots-vertical"
+          library="mdi"
+          size="md"
+          [ixMenuTriggerFor]="cardMenu"
+          ariaLabel="Card menu">
+        </ix-icon-button>
+        <ix-menu
+          #cardMenu
+          [items]="headerMenu"
+          (menuItemClick)="onHeaderMenuItemClick($event)">
+        </ix-menu>
+      </div>
+    </div>
   </div>
+
+  <!-- Content section -->
   <div class="ix-card__content">
     <ng-content></ng-content>
+  </div>
+
+  <!-- Footer section -->
+  <div class="ix-card__footer" *ngIf="hasFooter">
+    <div class="ix-card__footer-left">
+      <button
+        *ngIf="footerLink"
+        type="button"
+        class="ix-card__footer-link"
+        (click)="footerLink.handler()">
+        {{ footerLink.label }}
+      </button>
+    </div>
+
+    <div class="ix-card__footer-right">
+      <ix-button
+        *ngIf="secondaryAction"
+        [label]="secondaryAction.label"
+        variant="outline"
+        color="default"
+        [disabled]="secondaryAction.disabled || false"
+        (click)="secondaryAction.handler()">
+      </ix-button>
+
+      <ix-button
+        *ngIf="primaryAction"
+        [label]="primaryAction.label"
+        variant="filled"
+        color="primary"
+        [disabled]="primaryAction.disabled || false"
+        (click)="primaryAction.handler()">
+      </ix-button>
+    </div>
   </div>
 </div>
