--- a/projects/truenas-ui/src/lib/ix-menu/ix-menu.component.scss
+++ b/projects/truenas-ui/src/lib/ix-menu/ix-menu.component.scss
@@ -49,6 +49,8 @@
 }
 
 .ix-menu {
+  display: flex;
+  flex-direction: column;
   background: var(--bg2, #f5f5f5);
   border: 1px solid var(--lines, #e0e0e0);
   border-radius: 4px;
