--- a/projects/truenas-ui/src/lib/ix-card/ix-card.component.scss
+++ b/projects/truenas-ui/src/lib/ix-card/ix-card.component.scss
@@ -1,4 +1,7 @@
 .ix-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   border-radius: 8px;
   transition: box-shadow 0.3s ease;
   overflow: hidden;
@@ -44,6 +47,11 @@
       padding: 24px 32px;
     }
   }
+}
+
+.ix-card__content {
+  flex: 1;
+  min-height: 0;
 }
 
 .ix-card__header {
