--- a/projects/truenas-ui/src/lib/ix-tree/ix-nested-tree-node.component.html
+++ b/projects/truenas-ui/src/lib/ix-tree/ix-nested-tree-node.component.html
@@ -7,9 +7,8 @@
     cdkTreeNodeToggle
     [attr.aria-label]="'Toggle node'"
     type="button">
-    <ix-icon 
-      [name]="isExpanded ? 'chevron-down' : 'chevron-right'"
-      library="mdi"
+    <ix-icon
+      [name]="isExpanded ? 'mdi:chevron-down' : 'mdi:chevron-right'"
       size="sm"
       style="transition: transform 0.2s ease;">
     </ix-icon>
