Fix bad icon names in stories

--- a/projects/truenas-ui/src/lib/ix-tree/ix-nested-tree-node.component.html
+++ b/projects/truenas-ui/src/lib/ix-tree/ix-nested-tree-node.component.html
@@ -8,7 +8,8 @@
     [attr.aria-label]="'Toggle node'"
     type="button">
     <ix-icon
-      [name]="isExpanded ? 'mdi:chevron-down' : 'mdi:chevron-right'"
+      [name]="isExpanded ? 'chevron-down' : 'chevron-right'"
+      library="mdi"
       size="sm"
       style="transition: transform 0.2s ease;">
     </ix-icon>
