--- a/projects/truenas-ui/src/lib/ix-tree/ix-tree-node.component.html
+++ b/projects/truenas-ui/src/lib/ix-tree/ix-tree-node.component.html
@@ -13,7 +13,8 @@
       class="ix-tree-node__toggle"
       [class.ix-tree-node__toggle--expanded]="isExpanded">
       <ix-icon
-        [name]="isExpanded ? 'mdi:chevron-down' : 'mdi:chevron-right'"
+        [name]="isExpanded ? 'chevron-down' : 'chevron-right'"
+        library="mdi"
         size="sm"
         style="transition: transform 0.2s ease;">
       </ix-icon>
