--- a/projects/truenas-ui/src/lib/ix-card/ix-card.component.scss
+++ b/projects/truenas-ui/src/lib/ix-card/ix-card.component.scss
@@ -47,6 +47,30 @@
       padding: 24px 32px;
     }
   }
+
+  &--content-padding-none {
+    .ix-card__content {
+      padding: 0;
+    }
+  }
+
+  &--content-padding-small {
+    .ix-card__content {
+      padding: 0 16px 16px;
+    }
+  }
+
+  &--content-padding-medium {
+    .ix-card__content {
+      padding: 0 24px 24px;
+    }
+  }
+
+  &--content-padding-large {
+    .ix-card__content {
+      padding: 0 32px 32px;
+    }
+  }
 }
 
 .ix-card__content {
