Make content padding uniform on all sides. Update stories

--- a/projects/truenas-ui/src/lib/ix-card/ix-card.component.scss
+++ b/projects/truenas-ui/src/lib/ix-card/ix-card.component.scss
@@ -56,19 +56,19 @@
 
   &--content-padding-small {
     .ix-card__content {
-      padding: 0 16px 16px;
+      padding: 16px;
     }
   }
 
   &--content-padding-medium {
     .ix-card__content {
-      padding: 0 24px 24px;
+      padding: 24px;
     }
   }
 
   &--content-padding-large {
     .ix-card__content {
-      padding: 0 32px 32px;
+      padding: 32px;
     }
   }
 }
