--- a/projects/truenas-ui/src/lib/ix-tree/ix-tree-node.component.html
+++ b/projects/truenas-ui/src/lib/ix-tree/ix-tree-node.component.html
@@ -8,20 +8,23 @@
   
   <div class="ix-tree-node__content">
     <!-- Arrow icon for expandable nodes -->
-    <div 
-      *ngIf="isExpandable"
-      class="ix-tree-node__toggle"
-      [class.ix-tree-node__toggle--expanded]="isExpanded">
-      <ix-icon
-        [name]="isExpanded ? 'chevron-down' : 'chevron-right'"
-        library="mdi"
-        size="sm"
-        style="transition: transform 0.2s ease;">
-      </ix-icon>
-    </div>
-    
+    @if (isExpandable) {
+      <div
+        class="ix-tree-node__toggle"
+        [class.ix-tree-node__toggle--expanded]="isExpanded">
+        <ix-icon
+          [name]="isExpanded ? 'chevron-down' : 'chevron-right'"
+          library="mdi"
+          size="sm"
+          style="transition: transform 0.2s ease;">
+        </ix-icon>
+      </div>
+    }
+
     <!-- Spacer for non-expandable nodes -->
-    <div *ngIf="!isExpandable" class="ix-tree-node__spacer"></div>
+    @if (!isExpandable) {
+      <div class="ix-tree-node__spacer"></div>
+    }
     
     <!-- Node content -->
     <div class="ix-tree-node__text">
